# ithings-edge-sdk-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
demo/: CMakeLists.txt  demo.c  dev.c  dev.h
include/: common.h  device.h  lib_api.h  mapper_core.h  message.h  transport.h
include/util/: blockedqueue.h  event_listener.h  json_util.h  list.h  log.h  thread.h  thread_pool.h  util.h
lib/: libpaho-mqtt3a.so.1  libpaho-mqtt3a.so.1.3.10  libpaho-mqtt3as.so.1  libpaho-mqtt3as.so.1.3.10  libpaho-mqtt3c.so.1  libpaho-mqtt3c.so.1.3.10  libpaho-mqtt3cs.so.1  libpaho-mqtt3cs.so.1.3.10  paho-mqtt3a-static.lib  paho-mqtt3a.lib  paho-mqtt3as-static.lib  paho-mqtt3as.lib  paho-mqtt3c-static.lib  paho-mqtt3c.lib  paho-mqtt3cs-static.lib  paho-mqtt3cs.lib
lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig-noconfig.cmake  eclipse-paho-mqtt-cConfig.cmake  eclipse-paho-mqtt-cConfigVersion.cmake
src/: CMakeLists.txt  common.c  device.c  mapper_core.c
src/transport/: message.c  mqtt.c  mqtt.h  transport.c
src/util/: blockedqueue.c  cJSON.c  cJSON_Utils.c  event_listener.c  json_util.c  list.c  log.c  string_util.c  thread.c  thread_pool.c  util.c  uuid.c
