MESSAGE(STATUS "Running cmake version ${CMAKE_VERSION}")

CMAKE_MINIMUM_REQUIRED(VERSION 3.8.0)
PROJECT("ithings edge sdk" C)

INCLUDE(GNUInstallDirs)

INCLUDE_DIRECTORIES(include)

IF (WIN32)
    ADD_DEFINITIONS(-D_WIN32_WINNT=0x601)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(demo)
