MESSAGE(STATUS "Running cmake version ${CMAKE_VERSION}")

CMAKE_MINIMUM_REQUIRED(VERSION 3.8.0)
PROJECT("ithings edge sdk" C)

MESSAGE(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")

INCLUDE(GNUInstallDirs)

INCLUDE_DIRECTORIES(include)

IF (WIN32)
    ADD_DEFINITIONS(-D_WIN32_WINNT=0x601)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
    message(STATUS "CMAKE_C_FLAGS_DEBUG: ${CMAKE_C_FLAGS_DEBUG} CMAKE_C_FLAGS_RELEASE : ${CMAKE_C_FLAGS_RELEASE}")
    ## MT/MTd for static link based library such as vcruntime.dll... 
    SET(CMAKE_C_FLAGS_DEBUG "/Zi /Ob0 /Od /RTC1 /MTd ")
    SET(CMAKE_C_FLAGS_RELEASE "/O2 /Ob2 /DNDEBUG /MT ")
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(demo)
