SET(damo_src
	demo.c
    dev.c
	)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

MESSAGE(STATUS "paho demo: ${PAHO_MQTT3a_LIB}")
MESSAGE(STATUS "demo paho mqtt hints: ${PAHO_MQTT3c_LIB}")

ADD_EXECUTABLE(demo ${damo_src})
TARGET_LINK_LIBRARIES(demo
	mapper-core
	${PAHO_MQTT3a_LIB} 
	${PAHO_MQTT3c_LIB}
	${LIBS_SYSTEM})

INSTALL(TARGETS demo
        LIBRARY DESTINATION  ${CMAKE_INSTALL_LIBDIR}
        RUNTIME DESTINATION  ${CMAKE_INSTALL_BINDIR}
		ARCHIVE DESTINATION  ${CMAKE_INSTALL_LIBDIR})

GET_FILENAME_COMPONENT(LIB_BASE_PATH ${PAHO_MQTT3a_LIB} PATH)
IF (WIN32)
	FILE(GLOB allCopyFiles  "${LIB_BASE_PATH}/paho-mqtt3*.dll")
	INSTALL(FILES
		${allCopyFiles} 
		DESTINATION ${CMAKE_INSTALL_BINDIR})
ELSE()
	FILE(GLOB allCopyFiles  "${LIB_BASE_PATH}/libpaho-mqtt3*.so.*")
	INSTALL(FILES
		${allCopyFiles} 
		DESTINATION ${CMAKE_INSTALL_LIBDIR})
ENDIF()
